added, adverse effectsof drastic dieting

--- a/html/Eating_Healthy_is_A_Lifestyle.html
+++ b/html/Eating_Healthy_is_A_Lifestyle.html
@@ -27,6 +27,14 @@
 						<p>First, be willing to try new foods in order to develop a comfort with the unfamiliar.</p>
 						<p>Second, figure out what foods you enjoy the most. No matter what cuisine you enjoy most, there is always a way to make it healthy.</p>
 						<p>Third, be patient, establish eating habits that work for you, and most importantly have the will to change your lifesytle.</p>
+					<h2>Baby Steps=Long Term Results</h2>
+						<p>Never make any drastic changes to your diet. The idea is to cut out junk food and other unheathy foods gradually.</p>
+						<p>Ifdrastic changes are made immediatley thenthe body will respond negatively. Things that result from this include:</P>
+							<ol>
+								<li>Binge Eating</li>
+								<li>Weight Gain</li>
+								<li>Mood Swings due to an Imbalance of nutrients</li>
+							</ol>
 				</ol>	
 			</div>	
 		</body>	
