--- a/html/Eating_Healthy_is_A_Lifestyle.html
+++ b/html/Eating_Healthy_is_A_Lifestyle.html
@@ -7,12 +7,17 @@
 			font-family: fantasy;
 			font-size: 50px;
 		}
-		p{
+		h2{
+			background-color: teal;
 			text-align: center;
+			font-family: fantasy;
+			font-size: 50px;
+		}
+		p{
+			text-align: left;
 			background-color: teal;
 			border-color: gold;
 			border-top: 10px;
-
 		}
 	</style>
 
@@ -23,17 +28,17 @@
 			<div>
 				<ol>
 					<h1>Taking the first step</h1>
-						<p>Commiting is one of the hardest things to do. It requires tremendous sacrifice and the will to change. Furthermore, idivuiduals who are willing to step outside of their comfort zone will reap the most benefit.</p>
+						<p>Commiting the hardest things to do. It requires tremendous sacrifice and the will to change. Furthermore, idivuiduals who are willing to step outside of their comfort zone will reap the most benefit.</p>
 						<p>First, be willing to try new foods in order to develop a comfort with the unfamiliar.</p>
 						<p>Second, figure out what foods you enjoy the most. No matter what cuisine you enjoy most, there is always a way to make it healthy.</p>
 						<p>Third, be patient, establish eating habits that work for you, and most importantly have the will to change your lifesytle.</p>
-					<h2>Baby Steps=Long Term Results</h2>
+					<h2>Baby Steps = Long Term Results</h2>
 						<p>Never make any drastic changes to your diet. The idea is to cut out junk food and other unheathy foods gradually.</p>
-						<p>Ifdrastic changes are made immediatley thenthe body will respond negatively. Things that result from this include:</P>
+						<p>If drastic changes are made immediatley thenthe body will respond negatively. Things that result from this include:</P>
 							<ol>
-								<li>Binge Eating</li>
-								<li>Weight Gain</li>
-								<li>Mood Swings due to an Imbalance of nutrients</li>
+								<li>Binge eating</li>
+								<li>Weight gain</li>
+								<li>Mood swings due to an imbalance of nutrients</li>
 							</ol>
 				</ol>	
 			</div>	
