--- a/html/Eating_Healthy_is_A_Lifestyle.html
+++ b/html/Eating_Healthy_is_A_Lifestyle.html
@@ -2,7 +2,7 @@
 <html>
 	<style type="text/css">
 		h1{
-			background-color: teal;
+			background-color: gold;
 			text-align: center;
 			font-family: fantasy;
 			font-size: 50px;
